--- a/react-app/index.html
+++ b/react-app/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>react-app</title>
+    <meta name="description" content="SSC-Bench: A benchmark for evaluating Spatial Structural Competence through orthographic reasoning" />
+    <title>SSC-Bench | Spatial Structural Competence Benchmark</title>
   </head>
   <body>
     <div id="root"></div>
